Completed task 3, started on 4a, added styles to tip areas on tasks 1-3

--- a/main/html/employer-set-project/Task 2-Debugging-Existing-Code/Task2.html
+++ b/main/html/employer-set-project/Task 2-Debugging-Existing-Code/Task2.html
@@ -37,7 +37,8 @@
         <p> Task 2 is all about debugging.
             <br> You will be given a piece of broken code that you must thoroughly test, ammend errors and document all the changes made in a Test Plan.
             <br><br> The final goal is to produce a functional code that meets the requirements of the brief.
-        
+            <br> <br> The code provided will be in Python so ensure you are familiar with the language.
+
             <h4 id="Test Plans">Test Plans</h4>
             &ensp; <em>Nice.. What are Test Plans..?</em>
             <br><br> A Test Plan is a document that showcases:
@@ -49,7 +50,9 @@
                 <li> And the changes you made to fix those errors.</li>
             </ul>
 
-            <strong><em>Here is an example of a filled in Test Plan:</em></strong>
+            You will make your test plan in Microsoft Word.
+
+            <br> <br> <strong><em>Here is an example of a filled in Test Plan:</em></strong>
             <br> <br>
             &ensp; &ensp; <img src="../../../images/test-plan-example.png" alt="Example test plan" width="600"/>
             <br> <strong>key features:</strong>
@@ -87,6 +90,7 @@
         <p> 
             Tips for this task include:
             <ul>
+                <li> Practise Python <strong>waaaaay</strong>> too much </li>
                 <li> Color coding your Test Plan to make it easier to read,
                     <br> &ensp; <em>e.g: using red for errors, green for successful tests, etc.</em></li>
                 <li> Using comments in your code to explain changes made,</li>
