--- a/main/html/employer-set-project/Task 4a-Developing-A-Solution/Task4a.html
+++ b/main/html/employer-set-project/Task 4a-Developing-A-Solution/Task4a.html
@@ -22,6 +22,10 @@
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
             <option value="#what-section">What Is It?</option>
+            <option value="#MatPlotLib">MatPlotLib</option>
+            <option value="#Pandas">Pandas</option>
+            <option value="#datetime">DateTime</option>
+            <option value="#CSV Files">CSV Files</option>
             <option value="#marks-section">Marks?</option>
             <option value="#time-section">Time?</option>
             <option value="#Tips">Tips</option>
@@ -34,7 +38,31 @@
         <h2 class="heading">ESP - Task 4a: Developing A Solution</h2>
         
         <h3 id="what-section">What Is It?</h3>
-        <p> Task 4a is  </p>
+        <p> Task 4a is all about coding.
+            <br> You will be given:
+            <ul>
+                <li>A brief,</li>
+                <li>A CSV file containing data relevant to the brief</li>
+                <li>and a partially completed code.</li>
+            </ul> 
+
+            <h4 id="MatPlotLib">MatPlotLib</h4>
+
+            <h4 id="Pandas">Pandas</h4>
+
+            <h4 id="datetime">DateTime</h4>
+
+            <h4 id="CSV Files">CSV Files</h4>
+            <strong><em>We talk more about CSV files in Task 3 but here is an example of an ESP Task 4a CSV File:</em></strong>
+                <br> <br>
+                &emsp; &emsp; <img src="../../../images/csv-file-example-4a.png" alt="Example csv file" width="600"/>
+                <br> <strong>Differences:</strong>
+                <ul>
+                    <li> </li>  
+                </ul>
+                <br>
+
+        </p>
 
         <h3 id="marks-section">Marks?</h3>
         <p>Task 4a is worth 34 marks</p>
