--- a/main/html/content-areas/CA1 - Problem Solving/subtopic/1.3-strategies/1.3-strategies.html
+++ b/main/html/content-areas/CA1 - Problem Solving/subtopic/1.3-strategies/1.3-strategies.html
@@ -15,6 +15,19 @@
             <h1>1.3 - Strategies</h1>
         </div>
     </header>
+
+    <form>
+        <label for="sections">Jump to Section:</label>
+        <select name="sections" id="sections">
+            <option value="" disabled selected>Select a section</option>
+            <option value="#1.3.1-1.3.2">1.3.1 to 1.3.2 - Know the different approaches to solving problems and understand their purpose and when they are used</option>
+            <option value="#1.3.3-1.3.4">1.3.3 to 1.3.4 - Understand the purpose of root cause analysis and when it is used</option>
+            <option value="#1.3.5">1.3.5 - Know and understand the process of the high-level problem-solving strategy</option>
+            <option value="#1.3.6">1.3.6 - Interrelationships of problems & problem-solving strategies & judgements about the suitability of strategies to solve problems</option>
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
     <main>
         <section id="1.3.1-1.3.2">
             <h3 class="sub-heading">1.3.1 - Know the different approaches to solving problems and understand their purpose and when they are used</h3>
@@ -246,5 +259,15 @@
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
     </footer>
+
+    <script>
+        document.querySelector('form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const section = document.getElementById('sections').value;
+            if (section) {
+                window.location.hash = section;
+            }
+        });
+    </script>
 </body>
 </html>
